fixed alignment issue

--- a/src/app/layouts/redirect-cards/redirect-cards.component.scss
+++ b/src/app/layouts/redirect-cards/redirect-cards.component.scss
@@ -107,7 +107,7 @@ $animationSpeed: 40s;
 
 // Styling
 .slider {
-  background: white;
+  background: var(--process-bar-bg);
   height: 100px;
   margin: auto;
   overflow:hidden;
@@ -143,7 +143,22 @@ $animationSpeed: 40s;
   .slide {
     height: 100px;
     width: 185px;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
   }
+}
+
+.icon-text{
+  color: var(--supper-power-title-color);
+  text-align: start;
+  font-family: Poppins, serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 96.6%;
+  margin-top:15px;
 }
 ////////////////////////////////////////////////////////////////
 
@@ -269,7 +284,7 @@ $animationSpeed: 40s;
 
   // Styling
   .slider {
-    background: white;
+    background: var(--process-bar-bg);
     height: 100px;
     margin: auto;
     overflow:hidden;
